--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+const_format = { version = "0.2.34", features = ["fmt"] }
 dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
+include_dir = "0.7.4"
+manganis = "0.6.2"
+reqwest = "0.12.12"
 # dioxus-typst = { path = "../dioxus-typst" }
-# typst = "0.13.0"
+typst = "0.13.0"
 
 [features]
 default = ["web"]
