--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,13 @@ const_format = { version = "0.2.34", features = ["fmt"] }
 dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
 include_dir = "0.7.4"
 manganis = "0.6.2"
+rand = "0.9"
+getrandom = { version = "0.3", features = ["wasm_js"]}
 reqwest = "0.12.12"
 # dioxus-typst = { path = "../dioxus-typst" }
 typst = "0.13.0"
+tokio = "1.44.1"
+gloo = "0.11.0"
 
 [features]
 default = ["web"]
