--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,26 +2,28 @@
 name = "ferlora"
 version = "0.1.0"
 authors = ["jedsek <jedsek@qq.com>"]
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 const_format = { version = "0.2.34", features = ["fmt"] }
 dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
-include_dir = "0.7.4"
-manganis = "0.6.2"
-rand = "0.9"
-getrandom = { version = "0.3", features = ["wasm_js"]}
-reqwest = "0.12.12"
+# include_dir = "0.7.4"
+# manganis = "0.6.2"
+# rand = "0.9"
+# getrandom = { version = "0.3", features = ["wasm_js"]}
+# reqwest = "0.12.12"
 # dioxus-typst = { path = "../dioxus-typst" }
-typst = "0.13.0"
-tokio = "1.44.1"
-gloo = "0.11.0"
+# typst = "0.13.0"
+# tokio = "1.44.1"
+# gloo = "0.11.0"
 
 [features]
 default = ["web"]
 web = ["dioxus/web"]
+desktop = ["dioxus/desktop"]
+mobile = ["dioxus/mobile"]
 
 [profile]
 
