--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ferlora"
+name = "ferlory"
 version = "0.1.0"
 authors = ["jedsek <jedsek@qq.com>"]
 edition = "2024"
@@ -8,7 +8,7 @@ edition = "2024"
 
 [dependencies]
 const_format = { version = "0.2.34", features = ["fmt"] }
-dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["fullstack", "router"] }
+dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
 # include_dir = "0.7.4"
 # manganis = "0.6.2"
 # rand = "0.9"
