--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2024"
 
 [dependencies]
 const_format = { version = "0.2.34", features = ["fmt"] }
-dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
-gloo = "0.11.0"
+dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["fullstack", "router"] }
+slug = "0.1.6"
 phf = { version = "0.11", features = ["macros"] }
+gloo = "0.11.0"
 # include_dir = "0.7.4"
 # manganis = "0.6.2"
 rand = "0.9"
@@ -19,6 +20,10 @@ getrandom = { version = "0.3", features = ["wasm_js"]}
 # dioxus-typst = { path = "../dioxus-typst" }
 # typst = "0.13.0"
 # tokio = "1.44.1"
+
+[build-dependencies]
+walkdir = "2.5.0"
+phf = { version = "0.11", features = ["macros"] }
 
 [features]
 default = ["web"]
