--- a/packages/components/Cargo.toml
+++ b/packages/components/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
-name = "ferlory_routes"
+name = "ferlory_components"
 version = "0.1.0"
 authors = ["jedsek <jedsek@qq.com>"]
 edition = "2024"
 
 [dependencies]
+generated_typst = { path = "../generated_typst" }
 const_format = { version = "0.2.34", features = ["fmt"] }
 dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
-ferlory_components = { path = "../components" }
-ferlory_utils= { path = "../utils" }
 slug = "0.1.6"
 phf = { version = "0.11", features = ["macros"] }
 gloo = "0.11.0"
